1.修改扫码之后显示,历史数据以折叠面板展示.2.修改跨域配置

--- a/src/pages/ProcessRecord/style.less
+++ b/src/pages/ProcessRecord/style.less
@@ -1,4 +1,4 @@
-#main {
+	#main {
 		width: 100%;
 	}
 
@@ -67,7 +67,9 @@
 	}
 
 	.light {
-		background: #2DB7F5;
+		background: #CCCCCC;
+		display: flex;
+		flex-direction: row;
 	}
 
 	.red {
@@ -87,4 +89,8 @@
 	// 调试
 	.debug{
 		border:solid 1rpx red
+	}
+	.item{
+		border: solid 1rpx #F8F8F9;
+		background-color:#2DB7F5;
 	}
