--- a/src/pages/ProcessRecord/style.less
+++ b/src/pages/ProcessRecord/style.less
@@ -1,5 +1,51 @@
 	#main {
 		width: 100%;
+		.button-area{
+			width: 100%;
+			padding: 10rpx;
+		}
+		.button-area button{
+			width: 40%;
+		}
+		#modal{
+			position: absolute;
+			top:0;
+			z-index: 10;
+			width: 100%;
+			height: 100%;
+			background-color: #cacaca;
+			opacity: 95%;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			#mask{
+				margin-top: 300rpx;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				border-radius: 10rpx;
+				border: solid 2rpx black;
+				width: 90%;
+				height: 400rpx;
+				text{
+					margin: 10rpx;
+				}
+				input{
+					width: 50%;
+					height: 80rpx;
+					background-color: white;
+					border-radius: 10rpx;
+					text-align: center;
+					
+				}
+				button{
+					width: 200rpx;
+					margin: 30rpx;
+				}
+			}
+		
+		}
 	}
 
 	.flex {
@@ -17,9 +63,7 @@
 	.column {
 		flex-direction: column;
 	}
-	.margin{
-		margin: 4rpx;
-	}
+
 	.head {
 		background-color: #F8F8F9;
 	}
