--- a/src/pages/ProcessRecord/style.less
+++ b/src/pages/ProcessRecord/style.less
@@ -19,7 +19,7 @@
 			flex-direction: row;
 			justify-content: center;
 			#mask{
-				margin-top: 300rpx;
+				margin-top: 30%;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
@@ -27,21 +27,26 @@
 				border-radius: 10rpx;
 				border: solid 2rpx black;
 				width: 90%;
-				height: 400rpx;
+				height: 30%;
 				text{
 					margin: 10rpx;
 				}
 				input{
 					width: 50%;
-					height: 80rpx;
+					height: 15%;
 					background-color: white;
 					border-radius: 10rpx;
 					text-align: center;
 					
 				}
+				view{
+					width: 80%;
+					display: flex;
+					justify-content: space-between;
+				}
 				button{
-					width: 200rpx;
-					margin: 30rpx;
+					width: 40%;
+					margin: 30rpx 10rpx 10rpx 10rpx;
 				}
 			}
 		
