--- a/src/pages/ProcessRecord/style.less
+++ b/src/pages/ProcessRecord/style.less
@@ -11,18 +11,18 @@
 			width: 40%;
 		}
 		#modal{
-			position: absolute;
+			position: fixed;
 			top:0;
 			z-index: 10;
 			width: 100%;
-			height: 100%;
+			height: 100vh;
 			background-color: #cacaca;
 			opacity: 95%;
 			display: flex;
 			flex-direction: row;
 			justify-content: center;
 			#mask{
-				margin-top: 30%;
+				margin-top: 10%;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
@@ -30,7 +30,7 @@
 				border-radius: 10rpx;
 				border: solid 2rpx black;
 				width: 90%;
-				height: 30%;
+				height: 400rpx;
 				text{
 					margin: 10rpx;
 				}
