update:修改 工作台页面 样式

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,12 @@
 .mr {
     margin-right: 10rpx;
 }
+.mt{
+	margin-top: 10rpx;
+}
+.mb{
+	margin-bottom: 10rpx;
+}
 
 .px {
     padding-left : 10rpx;
