微信小程序端修改进行时

--- a/src/style.scss
+++ b/src/style.scss
@@ -71,6 +71,19 @@
 .grow-2 {
 	flex-grow: 2;
 }
+
+.wrap{
+	flex-wrap: wrap;
+}
+
 .hfull{
     height: calc(100vh - 44px);
+}
+.full-width{
+	width: 100%;
+}
+
+.scroll-y{
+	height: 100vh;
+	background-color: #efeff4;
 }
