updtae:微信小程序页面处理

--- a/src/style.scss
+++ b/src/style.scss
@@ -68,6 +68,12 @@
 .jc-c{
 	justify-content: center;
 }
+.jc-b{
+	justify-content: space-between;
+}
+.jc-a{
+	justify-content: space-around;
+}
 .grow-2 {
 	flex-grow: 2;
 }
