update:生产车间页面,改为长按出现复选框

--- a/src/static/common.css
+++ b/src/static/common.css
@@ -21,10 +21,11 @@
 .icon-back:before {
 	content: "\e62b";
 }
-.icon-box :before{
+
+.icon-box :before {
 	content: "\e6c6";
 }
-.icon-select {
+
+.icon-select :before {
 	content: "\e763";
 }
-
