--- a/src/static/common.css
+++ b/src/static/common.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'iconfont';  /* project id 2013340 */
-  src: url('//at.alicdn.com/t/font_2013340_zgdfop4rp6.eot');
-  src: url('//at.alicdn.com/t/font_2013340_zgdfop4rp6.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_2013340_zgdfop4rp6.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_2013340_zgdfop4rp6.woff') format('woff'),
-  url('//at.alicdn.com/t/font_2013340_zgdfop4rp6.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_2013340_zgdfop4rp6.svg#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/font_2013340_zgdfop4rp6.eot');
+  src: url('https://at.alicdn.com/t/font_2013340_zgdfop4rp6.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_2013340_zgdfop4rp6.woff2') format('woff2'),
+  url('https://at.alicdn.com/t/font_2013340_zgdfop4rp6.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_2013340_zgdfop4rp6.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_2013340_zgdfop4rp6.svg#iconfont') format('svg');
 }
 
 .iconfont {
